Go to http://github.com/plack/Plack/issues for the roadmap and known issues.

1.0017 Thu Feb  7 19:21:24 PST 2013
    [INCOMPATIBLE CHANGES]
        - Gives you warnings when you use one of Plack::App objects in `plackup -e` or
          in .psgi files but forgot to call ->to_app to make it a PSGI application (#369)
          Still automatically converts them for backward compatibility, but in the
          loading time inside Plack::Builder.

    [BUG FIXES]
        - chdir to the CGI path when executing CGIBin (#338, #368)

1.0016 Thu Jan 31 13:21:14 PST 2013
    [SECURITY]
        - Fixed directory traversal bug in Plack::App::File on win32 environments

    [INCOMPATIBLE CHANGES]
        - Updated Plack::Builder OO interface to be more natural. Still keeps backward
          compatible to the old ->mount() and ->to_app() interface.

    [NEW FEATURES]
        - Static middleware 'path' callback now takes $env as a 2nd argument (avar)
        - Static middleware takes 'content_type' callback to determine custom MIME (pstadt)

    [IMPROVEMENTS]
        - Fixed regexp warning for blead (doy)
        - Documentation update for AccessLog::Timed to suggest Runtime (ether)
        - Ignore vim swap files on restarter (nihen)
        - Major doucmentation overhaul on Apache2 startup files (rkitover, avar)

1.0015 Thu Jan 10 15:19:17 PST 2013
    [BUG FIXES]
        - Fixed Lint complaining about Latin-1 range characters stored internally with
          utf8 flag on (Mark Fowler)
        - HTTP::Message::PSGI::res_from_psgi now always returns empty string
          for an empty response body, so streamed responses are consistent with
          non-streamed (ether)

1.0014 Mon Dec  3 10:27:43 PST 2012
    [BUG FIXES]
        - Fixed Hash order in tests for perl 5.17 (doy)
        - Fixed StackTrace tests to run with Devel::StackTrace

    [IMPROVEMENTS]
        - Plack::Middleware::AccessLog can now log the worker pid and server
          port (ether)
